--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "axios": "^1.3.0",
     "chalk": "^4.1.2",
+    "colors": "^1.4.0",
     "jest": "^29.3.1"
   },
   "devDependencies": {
